add http proxy vanflow record to Link records
